--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,7 +3,7 @@ name: Build and Push Backend Docker Image
 on:
   push:
     branches:
-      - main  # Cambia 'main' por tu rama de desarrollo o producción según necesites
+      - main  # Ajusta esto según la rama que desees.
 
 jobs:
   build-and-push:
@@ -19,8 +19,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: lenin.chavez  # Usa tu nombre de usuario de Docker Hub
-          password: password  # Usa tu contraseña de Docker Hub
+          username: 'lenin.chavez'  # Reemplaza por tu nombre de usuario real
+          password: 'password'  # Reemplaza por tu contraseña real
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
@@ -28,7 +28,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: lenin.chavez/backend:${{ github.sha }}  # Cambia 'lenin.chavez/backend' por tu nombre de repositorio de Docker Hub
+          tags: lenin.chavez/backend:${{ github.sha }}  # Asegúrate de que esto coincida con tu configuración en Docker Hub
 
       - name: Clean up Buildx
         uses: docker/build-push-action@v3
