--- a/.github/workflows/tslint.yml
+++ b/.github/workflows/tslint.yml
@@ -23,13 +23,19 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 20
+          node-version: 18
 
+      # Instala las dependencias desde package.json, incluyendo @expo-google-fonts/plus-jakarta-sans
       - name: Install Node.js dependencies
         run: npm ci
 
+      # Ejecuta ESLint y Prettier para analizar los archivos .js en el directorio src
       - name: Run linters
         uses: wearerequired/lint-action@v2
         with:
           eslint: true
           prettier: true
+          files: |
+            "src/**/*.ts"        # Archivos TS en el directorio src
+            "test/**/*.ts"       # Archivos TS en el directorio de pruebas
+        args: --ignore-pattern 'node_modules/*' --ignore-pattern 'dist/*'
