--- a/.github/workflows/tslint.yml
+++ b/.github/workflows/tslint.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node
         with:
           node-version: 18
 
