--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,6 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
-  }
+  },
+  "include": ["src/**/*.ts", "test/**/*.ts", ".eslintrc.js"] // Asegúrate de incluir .eslintrc.js
 }
