--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
   },
-  "include": ["src/**/*.ts", "test/**/*.ts", ".eslintrc.js"] // Asegúrate de incluir .eslintrc.js
+  "include": ["src/**/*.ts", "test/**/*.ts", ".eslintrc.js"]
 }
